==> svofski/tapeshnik/HelloFOC/HelloFOC/src/PMW3360/PMW3360.cpp <==
#include "PMW3360.h"
#define PMW33XX_CPI_STEP 100
#define PMW33XX_CPI_MIN 100
#define PMW33XX_CPI_MAX 12000
#define PMW33XX_CPI 1600U
#define PMW33XX_CPI_STEP 50
#define PMW33XX_CPI_MIN 50
#define PMW33XX_CPI_MAX 16000
#define PMW33XX_CPI 2000
#    define PMW33XX_LIFTOFF_DISTANCE 0x02
#    define ROTATIONAL_TRANSFORM_ANGLE 0x00
#define BEGIN_COM {digitalWrite(_ss, LOW); delayMicroseconds(1);}
#define END_COM   {delayMicroseconds(1); digitalWrite(_ss, HIGH);}
#define SPI_BEGIN _spi->beginTransaction(SPISettings(10'000'000, MSBFIRST, SPI_MODE3))
#define SPI_END   _spi->endTransaction()

bool PMW3360::begin(SPIClass *spi, unsigned int ss_pin, unsigned int CPI)
{
  _spi = spi;
  _ss = ss_pin;
  _inBurst = false;
  pinMode(_ss, OUTPUT);
  digitalWrite(_ss, HIGH);

  _spi->begin();
  // SPI.setDataMode(SPI_MODE3);
  // SPI.setBitOrder(MSBFIRST);

  // hard reset
  SPI_BEGIN;
  END_COM; BEGIN_COM; END_COM; // ensure that the serial port is reset

  adns_write_reg(REG_Shutdown, 0xb6); // Shutdown first
  SPI_END;
  delay(300);
  
  SPI_BEGIN;
  BEGIN_COM;
  delayMicroseconds(40);
  END_COM;
  delayMicroseconds(40);

  adns_write_reg(REG_Power_Up_Reset, 0x5a); // force reset
  SPI_END;
  delay(50); // wait for it to reboot
  
  SPI_BEGIN;
  // read registers 0x02 to 0x06 (and discard the data)
  adns_read_reg(REG_Motion);
  adns_read_reg(REG_Delta_X_L);
  adns_read_reg(REG_Delta_X_H);
  adns_read_reg(REG_Delta_Y_L);
  adns_read_reg(REG_Delta_Y_H);
  // upload the firmware
  adns_upload_firmware();
  //SPI.endTransaction();
  SPI_END;
  
  delay(10);
  setCPI(PMW33XX_CPI);

  delay(1);

  adns_write_reg(REG_Config2, 0x00);
  adns_write_reg(REG_Angle_Tune, constrain(ROTATIONAL_TRANSFORM_ANGLE, -127, 127));
  adns_write_reg(REG_Lift_Config, PMW33XX_LIFTOFF_DISTANCE);

  //return check_signature();
  return true;
}

PMW3360_DATA PMW3360::readBurst()
{  
  byte burstBuffer[12];

  SPI_BEGIN;

  //Serial.print("REG_Motion=0x");
  //Serial.print(adns_read_reg(REG_Motion), 16);
  //Serial.print(", ");

  adns_write_reg(REG_Motion_Burst, 0x00);

  BEGIN_COM;
  _spi->transfer(REG_Motion_Burst);    
  delayMicroseconds(35); // waits for tSRAD  

  _spi->transfer(burstBuffer, 12); // read burst buffer
  delayMicroseconds(1); // tSCLK-NCS for read operation is 120ns
  END_COM;

  SPI_END;

  //for (int i = 0; i < sizeof(burstBuffer); ++i) {
  //  Serial.print(burstBuffer[i], 16); Serial.print(" ");
  //}
  //Serial.println();

  PMW3360_DATA data;

  data.isMotion = (burstBuffer[0] & 0x80) != 0;
  data.isOnSurface = (burstBuffer[0] & 0x08) == 0;   // 0 if on surface / 1 if off surface

  uint8_t xl = burstBuffer[2];    // dx LSB
  uint8_t xh = burstBuffer[3];    // dx MSB
  uint8_t yl = burstBuffer[4];    // dy LSB
  uint8_t yh = burstBuffer[5];    // dy MSB
  uint8_t sl = burstBuffer[10];   // shutter LSB
  uint8_t sh = burstBuffer[11];   // shutter MSB
  
  data.dx = xh<<8 | xl;
  data.dy = yh<<8 | yl;
  data.shutter = sh<<8 | sl;

  data.SQUAL = burstBuffer[6];
  data.rawDataSum = burstBuffer[7];
  data.maxRawData = burstBuffer[8];
  data.minRawData = burstBuffer[9];

  return data;
}

byte PMW3360::adns_read_reg(byte reg_addr) {
  if(reg_addr != REG_Motion_Burst)
  {
     _inBurst = false;
  }

  BEGIN_COM;
  // send adress of the register, with MSBit = 0 to indicate it's a read
  _spi->transfer(reg_addr & 0x7f );
  delayMicroseconds(100); // tSRAD is 25, but 100us seems to be stable.
  // read data
  byte data = _spi->transfer(0);

  END_COM;
  delayMicroseconds(19); //  tSRW/tSRR (=20us) minus tSCLK-NCS

  return data;
}

void PMW3360::adns_write_reg(byte reg_addr, byte data) {
  if(reg_addr != REG_Motion_Burst)
  {
    _inBurst = false;
  }

  BEGIN_COM;
  //send adress of the register, with MSBit = 1 to indicate it's a write
  _spi->transfer(reg_addr | 0x80 );
  //sent data
  _spi->transfer(data);

  delayMicroseconds(35); // tSCLK-NCS for write operation
  END_COM;
  delayMicroseconds(145); // tSWW/tSWR (=120us) minus tSCLK-NCS. Could be shortened, but is looks like a safe lower bound
}

void PMW3360::adns_upload_firmware() {
  //Write 0 to Rest_En bit of Config2 register to disable Rest mode.
  adns_write_reg(REG_Config2, 0x00);

  // write 0x1d in SROM_enable reg for initializing
  adns_write_reg(REG_SROM_Enable, 0x1d);

  // wait for more than one frame period
  delay(10); // assume that the frame rate is as low as 100fps... even if it should never be that low

  // write 0x18 to SROM_enable to start SROM download
  adns_write_reg(REG_SROM_Enable, 0x18);

  // write the SROM file (=firmware data)
  
  BEGIN_COM;
  _spi->transfer(REG_SROM_Load_Burst | 0x80); // write burst destination adress
  delayMicroseconds(15);

  // send all bytes of the firmware
  unsigned char c;
  for (int i = 0; i < firmware_length; i++) {
    c = (unsigned char)pgm_read_byte(firmware_data + i);
    _spi->transfer(c);
    delayMicroseconds(15);
  }
  END_COM;

  delayMicroseconds(200);
  //Read the SROM_ID register to verify the ID before any other register reads or writes.
  uint8_t srom_id = adns_read_reg(REG_SROM_ID);

  //Write 0x00 (rest disable) to Config2 register for wired mouse or 0x20 for wireless mouse design. 
  adns_write_reg(REG_Config2, 0x00);
  Serial.print("upload_firmware:"); Serial.println(srom_id, 16);
}

void PMW3360::prepareImage()
{
  SPI_BEGIN;

  adns_write_reg(REG_Config2, 0x00);

  adns_write_reg(REG_Frame_Capture, 0x83);
  adns_write_reg(REG_Frame_Capture, 0xc5);  

  delay(20);

  BEGIN_COM;
  _spi->transfer(REG_RawData_Burst & 0x7f);
  delayMicroseconds(20);  
}

byte PMW3360::readImagePixel()
{
  byte pixel = _spi->transfer(0);
  delayMicroseconds(20);

  return pixel;
}
